--- a/src/components/Projectlabel/Projectlabel.module.css
+++ b/src/components/Projectlabel/Projectlabel.module.css
@@ -61,3 +61,19 @@
     border-radius: 10px;
   }
 }
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .Projectlabel {
+    color: white;
+    background-color: white;
+    width: 11em;
+    height: 11em;
+    border-radius: 10px;
+    box-shadow: 0 4px 7px rgba(80, 174, 245, 0.2), 0 4px 7px rgba(0, 0, 0, 0.27);
+  }
+
+  .imagepath {
+    width: 11em;
+    height: 11em;
+    border-radius: 10px;
+  }
+}
