--- a/src/components/Landingpage/Landingpage.module.css
+++ b/src/components/Landingpage/Landingpage.module.css
@@ -275,11 +275,6 @@
     padding-bottom: 2em;
   }
 }
-.flyingplane {
-  height: 14em;
-  width: 14em;
-}
-
 .titlepagetop {
   display: flex;
   flex-direction: row;
@@ -474,8 +469,38 @@
 }
 @media only screen and (min-width: 769px) and (max-width: 1024px) {
   .planepile {
+    padding-top: 10em;
     height: 20em;
     width: 25em;
-    padding-bottom: 5em;
+  }
+
+  .comeonin {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .comeinscroll {
+    display: block;
+    color: white;
+    font-size: 1.8em;
+    padding-top: 0.5em;
+    -webkit-text-fill-color: #f6d7ba;
+    -webkit-text-stroke-width: 0px;
+    text-align: center;
+  }
+
+  .landingtitle {
+    color: white;
+    font-size: 3em;
+    text-align: center;
+  }
+
+  .abouttext {
+    padding: 0;
+    font-size: 1.8em;
+    padding-top: 0.7em;
+    text-align: center;
   }
 }
