--- a/src/components/Landingpage/Landingpage.module.scss
+++ b/src/components/Landingpage/Landingpage.module.scss
@@ -252,11 +252,11 @@
   }
 }
 
-.flyingplane {
-  height: 14em;
-  width: 14em;
-  // padding-left: 5em;
-}
+// .flyingplane {
+//   height: 14em;
+//   width: 14em;
+//   // padding-left: 5em;
+// }
 
 .titlepagetop {
   display: flex;
@@ -444,13 +444,34 @@
 }
 @media only screen and (min-width: 769px) and (max-width: 1024px) {
   .planepile {
+    padding-top: 10em;
     height: 20em;
     width: 25em;
-    padding-bottom: 5em;
+  }
+  .comeonin {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+  }
+  .comeinscroll {
+    display: block;
+    color: white;
+    font-size: 1.8em;
+    padding-top: 0.5em;
+    -webkit-text-fill-color: #f6d7ba;
+    -webkit-text-stroke-width: 0px;
+    text-align: center;
+  }
+  .landingtitle {
+    color: white;
+    font-size: 3em;
+    text-align: center;
+  }
+  .abouttext {
+    padding: 0;
+    font-size: 1.8em;
+    padding-top: 0.7em;
+    text-align: center;
   }
 }
-// @media only screen and (max-width: 1024px) {
-// }
-
-// @media only screen and (max-width: 1200px) {
-// }
