--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -128,6 +128,8 @@
     background-color: white;
     border-top: 1px solid #7b9eba;
     display: none;
+    font-size: 1.5em;
+    padding-top: 2em;
   }
 
   .navItemsFlexExpanded {
@@ -235,10 +237,73 @@
     display: block;
     text-align: center;
     margin: 0;
+    font-size: 1.5em;
+    padding-top: 2em;
   }
 
   .navsection {
-    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 6.5em;
+    box-shadow: 0 2px 6px -5px #000000;
+    background-color: white;
+    z-index: 100;
+    align-items: center;
+    width: 100%;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .menuWidget {
+    display: block;
+    margin-right: 1em;
+  }
+
+  .bridget {
+    margin-left: 3em;
+    margin-top: 1.8em;
+  }
+
+  .navflex {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    position: relative;
+    width: 100%;
+    margin-left: 0em;
+  }
+
+  .navItemsFlex ul {
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    min-width: 100%;
+    height: calc(100vh - 60px);
+    background-color: white;
+    border-top: 1px solid #7b9eba;
+    display: none;
+    padding-top: 20px;
+  }
+
+  .navItemsFlexExpanded {
+    flex-direction: column;
+    position: absolute;
+    top: 128px;
+    left: 0;
+    min-width: 100%;
+    height: 100vh;
+    background-color: white;
+    border-top: 1px solid #7b9eba;
+    display: block;
+    text-align: center;
+    margin: 0;
+    font-size: 1.5em;
+    padding-top: 2em;
+  }
+
+  .navsection {
     position: sticky;
     top: 0;
     left: 0;
