--- a/src/components/Projectbox/Projectbox.module.css
+++ b/src/components/Projectbox/Projectbox.module.css
@@ -179,10 +179,6 @@ button {
     padding: 0.5em;
   }
 
-  h3 {
-    display: none;
-  }
-
   .projectLinkProject {
     font-size: 0.6em;
     border: solid 2px white;
@@ -192,6 +188,55 @@ button {
 
   .projectLinkCode {
     font-size: 0.6em;
+    border: solid 2px white;
+    background-color: white;
+  }
+
+  .projectLinks {
+    color: white;
+    font-size: 1em;
+    background-color: none;
+    border: none;
+    text-decoration: none;
+    text-align: center;
+    margin-left: 0.5em;
+    padding-top: 0.5em;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .projectTitle {
+    width: 11em;
+    height: 11em;
+    border-radius: 10px;
+    padding: 0.9em;
+    justify-content: center;
+  }
+
+  h2 {
+    color: white;
+    font-size: 1.2em;
+    text-align: center;
+    border: solid 2px;
+    text-align: center;
+    padding: 0.5em;
+  }
+
+  h3 {
+    color: white;
+    font-size: 0.8em;
+    text-align: center;
+    padding-top: 0.5em;
+  }
+
+  .projectLinkProject {
+    font-size: 0.7em;
+    border: solid 2px white;
+    background-color: white;
+    margin-right: 1em;
+  }
+
+  .projectLinkCode {
+    font-size: 0.7em;
     border: solid 2px white;
     background-color: white;
   }
