--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -87,4 +87,16 @@
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .projecttitleflex {
+    margin-top: 8em;
+    width: 90vw;
+    height: 80vh;
+  }
+  .projectstitle {
+    color: #f6d7ba;
+    font-size: 2.8em;
+    margin-left: 1em;
+    margin-top: 1em;
+    font-family: "Merriweather", serif;
+  }
 }
