--- a/src/components/Sayhello/Sayhello.module.scss
+++ b/src/components/Sayhello/Sayhello.module.scss
@@ -238,5 +238,48 @@
   }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 1024px) {
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+  .sayhellotitle {
+    color: #f6d7ba;
+    font-size: 2.8em;
+    margin-left: 1em;
+    margin-top: 1em;
+    font-family: "Merriweather", serif;
+  }
+
+  .sayhellofooter {
+    background-image: url("../../Finalbirdswire_compressed.svg");
+    width: 90vw;
+    height: 40vh;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 90vw 70vh;
+  }
+
+  .sayhellosection {
+    background-color: #7b9eba;
+    width: 90vw;
+    height: 80vh;
+    box-shadow: 0 1px 3px 0px #5c5959;
+    border-radius: 1em;
+    margin-top: 8em;
+  }
+
+  .sayhelloparagraph {
+    font-size: 1em;
+    margin-left: 3em;
+    padding-top: 0.5em;
+  }
+  .email {
+    font-size: 0.9em;
+    font-weight: 250;
+    margin-left: 3em;
+    margin-right: 3em;
+    text-align: center;
+  }
+  .backtotopflex {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
 }
