Added new files

--- a/src/components/Landingpage/Landingpage.module.scss
+++ b/src/components/Landingpage/Landingpage.module.scss
@@ -405,10 +405,11 @@
     flex-direction: row;
     justify-content: center;
     width: 100%;
+    padding-top: 10em;
   }
   .planepile {
-    height: 18em;
-    width: 18em;
+    height: 20em;
+    width: 20em;
     padding-bottom: 0em;
   }
   .comeonin {
