--- a/src/components/ProjectList/ProjectList.module.scss
+++ b/src/components/ProjectList/ProjectList.module.scss
@@ -40,7 +40,7 @@
 @media only screen and (min-width: 481px) and (max-width: 768px) {
   .content {
     display: grid;
-    grid-template-columns: repeat(auto-fill, 9.5em);
+    grid-template-columns: repeat(auto-fill, 10em);
     grid-column-gap: 0.7em;
     grid-row-gap: 0.7em;
     justify-content: center;
@@ -48,6 +48,7 @@
     margin: 0.5em;
     margin-left: 0em;
     margin-right: 0em;
+    margin-top: 3em;
   }
 }
 @media only screen and (min-width: 769px) and (max-width: 1024px) {
@@ -61,5 +62,6 @@
     margin: 0.5em;
     margin-left: 0em;
     margin-right: 0em;
+    margin-top: 5em;
   }
 }
