Added new files

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -83,8 +83,8 @@
   flex-direction: row;
   gap: 10px;
   margin-right: 11em;
-  font-size: 1.2em;
-  padding-top: 3em;
+  // font-size: 1.2em;
+  // padding-top: 3em;
 }
 
 .menuWidget {
