--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -12,7 +12,9 @@
   font-family: "Inter", sans-serif;
   text-decoration: none;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 // html {
 //   height: 100%;
 //   width: 100%;
