--- a/src/components/Navmap/Navmap.module.css
+++ b/src/components/Navmap/Navmap.module.css
@@ -197,6 +197,20 @@
   background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%237b9eba' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
 }
 
+@media only screen and (min-width: 319px) and (max-width: 374px) {
+  .navigationflexcontainer4 {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    position: absolute;
+    top: 70%;
+    right: 10%;
+  }
+}
 @media screen and (max-width: 425px) {
   .worldmap {
     background: url("../../cropped map Britain.svg") bottom;
