--- a/src/components/Navmap/Navmap.module.scss
+++ b/src/components/Navmap/Navmap.module.scss
@@ -156,7 +156,6 @@
   padding-bottom: 0.5em;
   padding-left: 0.5em;
   padding-right: 0.5em;
-
   font-family: "Merriweather", serif;
 }
 .navigationbuttongriditem8:hover {
@@ -173,7 +172,6 @@
   height: 5em;
   width: 5em;
   margin-bottom: 0.8em;
-  // z-index: 600;
 }
 
 .navmapsection {
@@ -195,6 +193,20 @@
   background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%237b9eba' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
 }
 
+@media only screen and (min-width: 319px) and (max-width: 374px) {
+  .navigationflexcontainer4 {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    position: absolute;
+    top: 70%;
+    right: 10%;
+  }
+}
 @media screen and (max-width: 425px) {
   .worldmap {
     background: url("../../cropped map Britain.svg") bottom;
