Added new files

--- a/src/components/ProjectList/ProjectList.module.scss
+++ b/src/components/ProjectList/ProjectList.module.scss
@@ -9,7 +9,21 @@
   margin-left: 18em;
   margin-right: 18em;
 }
-@media screen and (max-width: 425px) {
+
+@media only screen and (min-width: 319px) and (max-width: 374px) {
+  .content {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 8em);
+    grid-column-gap: 0.8em;
+    grid-row-gap: 0.8em;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 1em;
+    margin-left: 1em;
+    margin-right: 1em;
+  }
+}
+@media only screen and (min-width: 375px) and (max-width: 425px) {
   .content {
     display: grid;
     grid-template-columns: repeat(auto-fill, 8em);
