--- a/src/components/Projectbox/Projectbox.module.css
+++ b/src/components/Projectbox/Projectbox.module.css
@@ -68,7 +68,7 @@ button {
   background-color: white;
 }
 
-@media only screen and (max-width: 425px) {
+@media only screen and (min-width: 319px) and (max-width: 425px) {
   .projectTitle {
     width: 8em;
     height: 8em;
