--- a/src/components/Projectbox/Projectbox.module.scss
+++ b/src/components/Projectbox/Projectbox.module.scss
@@ -18,7 +18,6 @@ h2 {
 
 h2:hover {
   color: orange;
-
 }
 
 .h2flex {
@@ -69,7 +68,7 @@ button {
   background-color: white;
 }
 
-@media only screen and (max-width: 425px) {
+@media only screen and (min-width: 319px) and (max-width: 425px) {
   .projectTitle {
     width: 8em;
     height: 8em;
@@ -174,7 +173,6 @@ button {
     border: solid 2px;
     text-align: center;
     padding: 0.5em;
-
   }
   h3 {
     display: none;
@@ -202,12 +200,12 @@ button {
     padding-top: 0.5em;
   }
 
-.linkFlexProjectCode {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  padding-top: 1em;
-}
+  .linkFlexProjectCode {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding-top: 1em;
+  }
 }
 
 @media only screen and (min-width: 769px) and (max-width: 1024px) {
@@ -229,9 +227,9 @@ button {
   }
   h3 {
     color: white;
-  font-size: 0.8em;
-  text-align: center;
-  padding-top: 0.5em;
+    font-size: 0.8em;
+    text-align: center;
+    padding-top: 0.5em;
   }
   .projectLinkProject {
     font-size: 0.7em;
