--- a/src/components/Projectbox/Projectbox.module.scss
+++ b/src/components/Projectbox/Projectbox.module.scss
@@ -67,11 +67,54 @@ button {
   border: solid 2px white;
   background-color: white;
 }
-
-@media only screen and (min-width: 319px) and (max-width: 425px) {
+@media only screen and (min-width: 319px) and (max-width: 374px) {
   .projectTitle {
-    width: 8em;
-    height: 8em;
+    width: 6em;
+    height: 6em;
+    border-radius: 10px;
+    padding: 0.5em;
+    justify-content: center;
+  }
+
+  h2 {
+    color: white;
+    font-size: 1em;
+    text-align: center;
+    border: solid 2px;
+    text-align: center;
+    padding: 0.2em;
+  }
+  h3 {
+    display: none;
+  }
+  .projectLinkProject {
+    font-size: 0.6em;
+    border: solid 2px white;
+    background-color: white;
+    margin-right: 1em;
+  }
+
+  .projectLinkCode {
+    font-size: 0.6em;
+    border: solid 2px white;
+    background-color: white;
+  }
+  .projectLinks {
+    color: white;
+    font-size: 1em;
+    background-color: none;
+    border: none;
+    text-decoration: none;
+    text-align: center;
+    margin-left: 0.5em;
+    padding-top: 0.5em;
+  }
+}
+
+@media only screen and (min-width: 375px) and (max-width: 425px) {
+  .projectTitle {
+    width: 6em;
+    height: 6em;
     border-radius: 10px;
     padding: 0.9em;
     justify-content: center;
@@ -111,7 +154,6 @@ button {
     padding-top: 0.5em;
   }
 }
-
 @media only screen and (min-width: 426px) and (max-width: 480px) {
   .projectTitle {
     width: 9em;
