--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -40,7 +40,22 @@
   width: 5em;
 }
 
-@media screen and (max-width: 425px) {
+@media only screen and (min-width: 319px) and (max-width: 374px) {
+  .projecttitleflex {
+    margin-top: 8em;
+    width: 90vw;
+    height: 80vh;
+  }
+
+  .projectstitle {
+    color: #f6d7ba;
+    font-size: 2.8em;
+    margin-left: 1em;
+    margin-top: 1em;
+    font-family: "Merriweather", serif;
+  }
+}
+@media only screen and (min-width: 375px) and (max-width: 425px) {
   .projecttitleflex {
     margin-top: 8em;
     width: 90vw;
