--- a/src/components/Sayhello/Sayhello.module.scss
+++ b/src/components/Sayhello/Sayhello.module.scss
@@ -125,7 +125,47 @@
   justify-content: center;
 }
 
-@media screen and (max-width: 425px) {
+@media only screen and (min-width: 319px) and (max-width: 374px) {
+  .sayhellofooter {
+    background-image: url("../../Finalbirdswire_compressed.svg");
+    width: 90vw;
+    height: 40vh;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 90vw 70vh;
+  }
+  .sayhelloparagraph {
+    font-size: 1em;
+    margin-left: 2em;
+    padding-top: 0.5em;
+  }
+  .email {
+    font-size: 0.8em;
+    font-weight: 250;
+    margin-left: 3em;
+    margin-right: 3em;
+    text-align: center;
+  }
+  .sayhellotitle {
+    color: #f6d7ba;
+    font-size: 2.2em;
+    margin-left: 1em;
+    margin-top: 1em;
+    font-family: "Merriweather", serif;
+  }
+
+  .github a {
+    color: white;
+    font-size: 30px;
+  }
+
+  .linkedin a {
+    color: white;
+    font-size: 30px;
+  }
+}
+
+@media only screen and (min-width: 375px) and (max-width: 425px) {
   .sayhellotitle {
     color: #f6d7ba;
     font-size: 2.8em;
@@ -157,7 +197,18 @@
     margin-left: 3em;
     padding-top: 0.5em;
   }
+
+  .github a {
+    color: white;
+    font-size: 30px;
+  }
+
+  .linkedin a {
+    color: white;
+    font-size: 30px;
+  }
 }
+
 @media only screen and (min-width: 426px) and (max-width: 480px) {
   .sayhellotitle {
     color: #f6d7ba;
