--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -148,7 +148,81 @@
   margin-left: 4em;
 }
 
-@media only screen and (max-width: 425px) {
+@media only screen and (min-width: 319px) and (max-width: 374px) {
+  .aboutparagraph {
+    text-align: center;
+    width: 19em;
+    border-radius: 0.5em;
+    font-size: 0.8em;
+    border: solid 2px;
+    border-radius: 0.5em;
+    padding: 0.5em;
+    background-color: white;
+    background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%237b9eba' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+  }
+
+  .aboutsectionflex {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .aboutparagraphinnerbox {
+    background-color: white;
+    padding: 0.8em;
+    font-size: 1em;
+  }
+
+  .pinnoteboxflex {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-left: 6em;
+    margin-top: 6em;
+    padding-right: 15em;
+    padding-bottom: 12em;
+    width: 100%;
+  }
+
+  .navigationpin {
+    height: 2.5em;
+    width: 2.5em;
+  }
+
+  .newBirds {
+    width: 14em;
+    height: 8em;
+    margin-left: 1em;
+  }
+
+  .pinflex {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 12em;
+  }
+
+  .abouttitle {
+    color: #f6d7ba;
+    font-size: 2.8em;
+    margin-left: 1em;
+    margin-top: 1em;
+    font-family: "Merriweather", serif;
+  }
+
+  .aboutsection {
+    background-color: #7b9eba;
+    width: 90vw;
+    height: 80vh;
+    border-radius: 1em;
+    background: url("../../skylineopacity50.svg") bottom no-repeat;
+    background-size: width 50% 40vh;
+    background-color: #7b9eba;
+    display: flex;
+    margin-top: 8em;
+  }
+}
+@media only screen and (min-width: 375px) and (max-width: 425px) {
   .aboutparagraph {
     text-align: center;
     width: 19em;
