--- a/src/components/Skills/Skills.module.scss
+++ b/src/components/Skills/Skills.module.scss
@@ -436,7 +436,7 @@
   .flyingplane {
     width: 10em;
     height: 5em;
-    margin-top: 6em;
+    margin-top: 0em;
   }
 
   .skillssectionboxflex {
@@ -896,7 +896,7 @@
 @media only screen and (min-width: 319px) and (max-width: 374px) {
   .skillslistbox {
     text-align: center;
-    width: 20em;
+    width: 16em;
     border-radius: 0.5em;
     border: solid 2px #f6d7ba;
     padding: 1em;
@@ -929,12 +929,14 @@
     font-size: 2.8em;
     margin-left: 1em;
     margin-top: 1em;
+    padding-bottom: 1em;
     font-family: "Merriweather", serif;
   }
 
   .flyingplane {
-    width: 16em;
-    height: 8em;
+    width: 10em;
+    height: 5em;
+    padding-bottom: 2em;
     // padding-top: 7em;
   }
 
@@ -948,7 +950,7 @@
     margin-right: 0em;
   }
   .skillslist {
-    margin-left: 1em;
+    margin-left: 0.2em;
   }
   .navigationpinflex {
     display: flex;
@@ -965,7 +967,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 20em;
+    width: 16em;
   }
   .skillsparagraph {
     color: #fcbc80;
@@ -1137,7 +1139,7 @@
   .skillsboxflex {
     width: 80%;
     padding-right: 5em;
-    padding-left: 15em;
+    padding-left: 1em;
     padding-bottom: 1em;
   }
 
