Added new files

--- a/src/components/Sayhello/Sayhello.module.scss
+++ b/src/components/Sayhello/Sayhello.module.scss
@@ -185,6 +185,12 @@
   .buttoncontactme {
     padding-top: 1em;
   }
+  
+  .email {
+    color: white;
+    font-size: 0.9em;
+  }
+
   .sayhellofooter {
     background-image: url("../../Finalbirdswire_compressed.svg");
     width: 90vw;
