--- a/src/components/Sayhello/Sayhello.module.css
+++ b/src/components/Sayhello/Sayhello.module.css
@@ -193,6 +193,11 @@
     padding-top: 1em;
   }
 
+  .email {
+    color: white;
+    font-size: 0.9em;
+  }
+
   .sayhellofooter {
     background-image: url("../../Finalbirdswire_compressed.svg");
     width: 90vw;
