Added new files

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -136,6 +136,7 @@
     background-color: white;
     border-top: 1px solid #7b9eba;
     display: none;
+    padding-top: 3em;
   }
 
   .navItemsFlexExpanded {
