--- a/src/components/Sayhello/Sayhello.module.scss
+++ b/src/components/Sayhello/Sayhello.module.scss
@@ -131,6 +131,10 @@
   .buttoncontactme {
     padding-top: 1em;
   }
+  .email {
+    color: white;
+    font-size: 0.9em;
+  }
   .sayhellotitle {
     color: #f6d7ba;
     font-size: 2.8em;
@@ -185,7 +189,7 @@
   .buttoncontactme {
     padding-top: 1em;
   }
-  
+
   .email {
     color: white;
     font-size: 0.9em;
