--- a/src/components/Sayhello/Sayhello.module.css
+++ b/src/components/Sayhello/Sayhello.module.css
@@ -138,6 +138,11 @@
     padding-top: 1em;
   }
 
+  .email {
+    color: white;
+    font-size: 0.9em;
+  }
+
   .sayhellotitle {
     color: #f6d7ba;
     font-size: 2.8em;
